Google sign-in integration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FGA Pool</string>
+    <!--<string name="default_web_client_id" translatable="false">577000861442-eok56j6815m6fjek1kufvpmj6bafq0ki.apps.googleusercontent.com</string>-->
 </resources>
