--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">FGA Pool</string>
+    <string name="title_activity_bottom_navigation">BottomNavigation</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
     <!--<string name="default_web_client_id" translatable="false">577000861442-eok56j6815m6fjek1kufvpmj6bafq0ki.apps.googleusercontent.com</string>-->
 </resources>
