--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="welcome">Bem Vindo</string>
     <string name="welcome_helper">Entre para continuar</string>
     <string name="sign_in_with_google">Entrar com o Google</string>
+    <string name="title_activity_maps">MapsActivity</string>
     <!--<string name="default_web_client_id" translatable="false">577000861442-eok56j6815m6fjek1kufvpmj6bafq0ki.apps.googleusercontent.com</string>-->
 </resources>
