Filter ride list and views depending on user type

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="sign_in_with_google">Entrar com o Google</string>
     <string name="title_activity_maps">MapsActivity</string>
     <!--<string name="default_web_client_id" translatable="false">577000861442-eok56j6815m6fjek1kufvpmj6bafq0ki.apps.googleusercontent.com</string>-->
+    <string name="DB_on_edit_success">Editado com sucesso!</string>
     <string name="DB_on_send_success">Cadastrado com sucesso!</string>
     <string name="DB_on_send_failure">Não foi possível enviar os dados, tente novamente!</string>
     <string name="add">add</string>
