fixing popup menu bug when there was more than 4 itens in recyclerView. Implemented filter list by search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,10 @@
     <!--<string name="default_web_client_id" translatable="false">577000861442-eok56j6815m6fjek1kufvpmj6bafq0ki.apps.googleusercontent.com</string>-->
     <string name="DB_on_edit_success">Editado com sucesso!</string>
     <string name="DB_on_send_success">Cadastrado com sucesso!</string>
+    <string name="DB_on_remove_success">Removido com sucesso!</string>
     <string name="DB_on_send_failure">Não foi possível enviar os dados, tente novamente!</string>
+    <string name="not_authorized">Você não tem autorização para fazer isso!</string>
+    <string name="not_possible">Não foi possível fazer isto, tente novamente!</string>
     <string name="add">add</string>
     <string name="edit">Editar</string>
     <string name="delete">Deletar</string>
